Add the code to retrieve detail address
git-svn-id: file:///C/Users/Zongjiang/Dropbox/GoWithMiBE@12 79c3cf20-dd23-964d-9c9e-1fec1f826ead

--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,13 @@
 		</dependency>
 		<!-- Hibernate library dependecy end -->
 		
+		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+		
 		<!-- DB setting end -->
 	</dependencies>
 </project>
