Add the logic of shallway
git-svn-id: file:///C/Users/Zongjiang/Dropbox/GoWithMiBE@35 79c3cf20-dd23-964d-9c9e-1fec1f826ead

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -58,6 +58,7 @@ log4j.logger.bowstreet.system.out=INFO
 # AXIS inherits its debug from the rootCategory, so set it separately so we don't get tons of DEBUG by
 # default if someone turns on DEBUG at the root level for the bowstreet categories
 log4j.logger.org.apache.axis=WARN,Console
+log4j.logger.org.hibernate=WARN
 
 
 # Following is the category for Profile Selection Handler debug tracing.
@@ -294,4 +295,6 @@ log4j.appender.TSA.MaxBackupIndex=2
 # Appender TSA uses the PatternLayout.
 log4j.appender.TSA.layout=org.apache.log4j.PatternLayout
 log4j.appender.TSA.layout.ConversionPattern=*-- TIME: [%d] --* %nCategory: %c%nPriority: %p%nThread:   %t%nMsg:      %m%n%n%n
+
+
 
