Enhance the logic when the user is not online
git-svn-id: file:///C/Users/Zongjiang/Dropbox/GoWithMiBE@57 79c3cf20-dd23-964d-9c9e-1fec1f826ead

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,7 +13,7 @@
 # uses WARN as the default priority.  The "bowstreet.system.out" category also uses the
 # appenders below for its output.  If you remove the Console appender from the line below
 # make sure you add it to the "bowstreet.system.out" category.
-log4j.rootCategory=Debug, Console, General
+log4j.rootCategory=INFO, Console, General
 
 # These categories are for system level logging, please set the priority
 # of category to INFO, WARN or DEBUG to enable that category. Severity levels have
