Update the logic of the date
git-svn-id: file:///C/Users/Zongjiang/Dropbox/GoWithMiBE@60 79c3cf20-dd23-964d-9c9e-1fec1f826ead

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,4 +69,7 @@
 		<listener-class>com.william.listener.ContextListener</listener-class>
 	</listener>
 
+	<session-config>
+	    <session-timeout>-1</session-timeout>
+	</session-config>
 </web-app>
