--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,16 @@
   	<welcome-file-list>
     	<welcome-file>index.jsp</welcome-file>
   	</welcome-file-list>
-  	
+
+    <filter>
+	    <filter-name>LoginFilter</filter-name>
+	    <filter-class>com.william.filter.AuthenticationFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+	    <filter-name>LoginFilter</filter-name>
+	    <url-pattern>/authenticate/*</url-pattern>
+	</filter-mapping>    	
   	
   	  
     <!-- url-pattern中配置的/coreServlet用于指定该Servlet的访问路径 -->  
@@ -54,15 +63,7 @@
         </servlet-class>  
     </servlet>    
     
-    <filter>
-	    <filter-name>LoginFilter</filter-name>
-	    <filter-class>com.william.filter.AuthenticationFilter</filter-class>
-	</filter>
 
-	<filter-mapping>
-	    <filter-name>LoginFilter</filter-name>
-	    <url-pattern>/*</url-pattern>
-	</filter-mapping>  
 	
 
 	<listener>
