--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<version>2.2.1</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.3</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>log4j</groupId>
