--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
 	<filter-mapping>
 	    <filter-name>LoginFilter</filter-name>
-	    <url-pattern>/authenticate/*</url-pattern>
+	    <url-pattern>/*</url-pattern>
 	</filter-mapping>    	
   	
   	  
