--- a/pom.xml
+++ b/pom.xml
@@ -50,19 +50,19 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.2.1</version>
+			<version>2.7.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.2.1</version>
+			<version>2.7.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.2.1</version>
+			<version>2.7.3</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
@@ -117,6 +117,7 @@
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
         </dependency>
+        <!-- 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
@@ -133,6 +134,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+         -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -240,5 +242,26 @@
 		</dependency>
 		
 		<!-- DB setting end -->
+		
+		<!-- GEOIP from maxmind -->
+		<dependency>
+	        <groupId>com.maxmind.geoip2</groupId>
+	        <artifactId>geoip2</artifactId>
+	        <version>2.8.0-rc1</version>
+	    </dependency>
+	    <!-- GEOIP from maxmind end -->
+	    
+		<!-- https://mvnrepository.com/artifact/com.google.maps/google-maps-services -->
+		<dependency>
+		    <groupId>com.google.maps</groupId>
+		    <artifactId>google-maps-services</artifactId>
+		    <version>0.1.15</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.json</groupId>
+		  <artifactId>json</artifactId>
+		  <version>20090211</version>
+		</dependency>
 	</dependencies>
 </project>
