make the alphet case sync with prd
git-svn-id: file:///C/Users/Zongjiang/Dropbox/GoWithMiBE@120 79c3cf20-dd23-964d-9c9e-1fec1f826ead

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -77,7 +77,7 @@ log4j.appender.Console=org.apache.log4j.ConsoleAppender
 # -------------- It uses DailyRollingFileAppender, so it can be configured to save
 # -------------- off the results to other files based on the DatePattern.
 log4j.appender.Server=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.Server.File=D\:\\temp\\logs\\event.log
+log4j.appender.Server.File=/var/lib/tomcat7/logs/event.log
 log4j.appender.Server.DatePattern='.'yyyy-MM-dd
 log4j.appender.Server.layout=org.apache.log4j.PatternLayout
 log4j.appender.Server.layout.ConversionPattern=*-- TIME: [%d] --* %nCategory: %c%nPriority: %p%nThread:   %t%nMsg:      %m%n%n%n
@@ -92,7 +92,7 @@ log4j.appender.Console.layout.ConversionPattern=*-- TIME: [%d] --* %nCategory: %
 
 # -------------- The General appender sends its ouput to general.txt --------------
 log4j.appender.General=org.apache.log4j.FileAppender
-log4j.appender.General.File=D\:\\temp\\logs\\general.txt
+log4j.appender.General.File=/var/lib/tomcat7/logs/general.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.General.Append=true
@@ -103,7 +103,7 @@ log4j.appender.General.layout.ConversionPattern=*-- TIME: [%d] --* %nCategory: %
 
 # -------------- The ServerStats appender sends its ouput to serverStats.txt --------------
 log4j.appender.ServerStats=org.apache.log4j.FileAppender
-log4j.appender.ServerStats.File=D\:\\temp\\logs\\serverStats.txt
+log4j.appender.ServerStats.File=/var/lib/tomcat7/logs/serverStats.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.ServerStats.Append=true
@@ -115,7 +115,7 @@ log4j.appender.ServerStats.layout.ConversionPattern=*-- TIME: [%d] --* %nCategor
 
 # -------------- The Request appender sends its ouput to request.txt --------------
 log4j.appender.Request=org.apache.log4j.FileAppender
-log4j.appender.Request.File=D\:\\temp\\logs\\request.txt
+log4j.appender.Request.File=/var/lib/tomcat7/logs/request.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.Request.Append=true
@@ -126,7 +126,7 @@ log4j.appender.Request.layout.ConversionPattern=*-- TIME: [%d] --* %nCategory: %
 
 # -------------- The ProfileSelection appender sends its ouput to profileSelection.txt --------------
 log4j.appender.ProfileSelection=org.apache.log4j.FileAppender
-log4j.appender.ProfileSelection.File=D\:\\temp\\logs\\profileSelection.txt
+log4j.appender.ProfileSelection.File=/var/lib/tomcat7/logs/profileSelection.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.ProfileSelection.Append=true
@@ -137,7 +137,7 @@ log4j.appender.ProfileSelection.layout.ConversionPattern=*-- TIME: [%d] --* %nCa
 
 # -------------- The Regen appender sends its ouput to regen.txt --------------
 log4j.appender.Regen=org.apache.log4j.FileAppender
-log4j.appender.Regen.File=D\:\\temp\\logs\\regen.txt
+log4j.appender.Regen.File=/var/lib/tomcat7/logs/regen.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.Regen.Append=true
@@ -148,7 +148,7 @@ log4j.appender.Regen.layout.ConversionPattern=*-- TIME: [%d] --* %nCategory: %c%
 
 # -------------- The BuilderCall appender sends its ouput to builderCalls.txt --------------
 log4j.appender.BuilderCalls=org.apache.log4j.FileAppender
-log4j.appender.BuilderCalls.File=D\:\\temp\\logs\\builderCalls.txt
+log4j.appender.BuilderCalls.File=/var/lib/tomcat7/logs/builderCalls.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.BuilderCalls.Append=true
@@ -159,7 +159,7 @@ log4j.appender.BuilderCalls.layout.ConversionPattern=*-- TIME: [%d] --* %nCatego
 
 # -------------- The BuilderCallTiming appender sends its ouput to builderCallTiming.txt --------------
 log4j.appender.BuilderCallTiming=org.apache.log4j.FileAppender
-log4j.appender.BuilderCallTiming.File=D\:\\temp\\logs\\builderCallTiming.txt
+log4j.appender.BuilderCallTiming.File=/var/lib/tomcat7/logs/builderCallTiming.txt
 
 
 # Don't truncate the logging file if it aleady exists.
@@ -171,7 +171,7 @@ log4j.appender.BuilderCallTiming.layout.ConversionPattern=*-- TIME: [%d] --* %nC
 
 # -------------- The ModelActions appender sends its ouput to modelActions.txt --------------
 log4j.appender.ModelActions=org.apache.log4j.FileAppender
-log4j.appender.ModelActions.File=D\:\\temp\\logs\\modelActions.txt
+log4j.appender.ModelActions.File=/var/lib/tomcat7/logs/modelActions.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.ModelActions.Append=true
@@ -182,7 +182,7 @@ log4j.appender.ModelActions.layout.ConversionPattern=*-- TIME: [%d] --* %nCatego
 
 # -------------- The DebugTracing appender sends its ouput to debugTracing.txt --------------
 log4j.appender.DebugTracing=org.apache.log4j.FileAppender
-log4j.appender.DebugTracing.File=D\:\\temp\\logs\\debugTracing.txt
+log4j.appender.DebugTracing.File=/var/lib/tomcat7/logs/debugTracing.txt
 
 
 # Truncate the logging file if it aleady exists.
@@ -194,7 +194,7 @@ log4j.appender.DebugTracing.layout.ConversionPattern=*-- TIME: [%d] --* %nCatego
 
 # -------------- The ServiceCalls appender sends its ouput to serviceCalls.txt --------------
 log4j.appender.ServiceCalls=org.apache.log4j.FileAppender
-log4j.appender.ServiceCalls.File=D\:\\temp\\logs\\serviceCalls.txt
+log4j.appender.ServiceCalls.File=/var/lib/tomcat7/logs/serviceCalls.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.ServiceCalls.Append=true
@@ -205,7 +205,7 @@ log4j.appender.ServiceCalls.layout.ConversionPattern=*-- TIME: [%d] --* %nCatego
 
 # -------------- The ServiceConsumer appender sends its ouput to serviceConsumer.txt --------------
 log4j.appender.ServiceConsumer=org.apache.log4j.FileAppender
-log4j.appender.ServiceConsumer.File=D\:\\temp\\logs\\serviceConsumer.txt
+log4j.appender.ServiceConsumer.File=/var/lib/tomcat7/logs/serviceConsumer.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.ServiceConsumer.Append=true
@@ -216,7 +216,7 @@ log4j.appender.ServiceConsumer.layout.ConversionPattern=*-- TIME: [%d] --* %nCat
 
 # -------------- The IncomingSOAPRequests appender sends its ouput to incomingSOAPRequests.txt --------------
 log4j.appender.IncomingSOAPRequests=org.apache.log4j.FileAppender
-log4j.appender.IncomingSOAPRequests.File=D\:\\temp\\logs\\incomingSOAPRequests.txt
+log4j.appender.IncomingSOAPRequests.File=/var/lib/tomcat7/logs/incomingSOAPRequests.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.IncomingSOAPRequests.Append=true
@@ -228,7 +228,7 @@ log4j.appender.IncomingSOAPRequests.layout.ConversionPattern=*-- TIME: [%d] --* 
 
 # -------------- The UserLog appender sends its ouput to userLog.txt --------------
 log4j.appender.UserLog=org.apache.log4j.FileAppender
-log4j.appender.UserLog.File=D\:\\temp\\logs\\userLog.txt
+log4j.appender.UserLog.File=/var/lib/tomcat7/logs/userLog.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.UserLog.Append=true
@@ -240,7 +240,7 @@ log4j.appender.UserLog.layout.ConversionPattern=*-- TIME: [%d] --* %nCategory: %
 
 # -------------- The ProfileSelectionHandler appender sends its ouput to profileSelectionHandler.txt --------------
 log4j.appender.ProfileSelectionHandler=org.apache.log4j.FileAppender
-log4j.appender.ProfileSelectionHandler.File=D\:\\temp\\logs\\profileSelectionHandler.txt
+log4j.appender.ProfileSelectionHandler.File=/var/lib/tomcat7/logs/profileSelectionHandler.txt
 
 # Truncate the logging file if it aleady exists.
 log4j.appender.ProfileSelectionHandler.Append=true
@@ -252,7 +252,7 @@ log4j.appender.ProfileSelectionHandler.layout.ConversionPattern=*-- TIME: [%d] -
 
 # -------------- The AlertsEngine appender sends its ouput to alertsEngine.txt --------------
 log4j.appender.AlertsEngine=org.apache.log4j.FileAppender
-log4j.appender.AlertsEngine.File=D\:\\temp\\logs\\alertsEngine.txt
+log4j.appender.AlertsEngine.File=/var/lib/tomcat7/logs/alertsEngine.txt
 
 log4j.appender.AlertsEngine.Append=true
 
@@ -269,7 +269,7 @@ log4j.logger.com.bowstreet.solutions.alertingTrace=DEBUG, AlertsEngine
 
 # -------------- The SessionSize appender sends its ouput to sessionsize.csv --------------
 log4j.appender.SessionSize=org.apache.log4j.FileAppender
-log4j.appender.SessionSize.File=D\:\\temp\\logs\\sessionsize.csv
+log4j.appender.SessionSize.File=/var/lib/tomcat7/logs/sessionsize.csv
 log4j.appender.SessionSize.layout=org.apache.log4j.PatternLayout
 log4j.appender.SessionSize.layout.ConversionPattern="*-- %d --*"%n%m%n%n%n
 log4j.appender.SessionSize.Append=true
@@ -284,7 +284,7 @@ log4j.logger.com.ibm.solutions.tutorialsample = INFO, TSA
 # -------------- The Tutorial sample application appender sends its ouput to TutorialSampleApp.txt --------------
 log4j.appender.TSA=org.apache.log4j.RollingFileAppender
 
-log4j.appender.TSA.File=D\:\\temp\\logs\\TutorialSampleApp.txt
+log4j.appender.TSA.File=/var/lib/tomcat7/logs/TutorialSampleApp.txt
 log4j.appender.TSA.Append=true
 
 # this is used when defined as RollingFileAppender
