--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.4.2</version>
+			<version>2.9.0</version>
 		</dependency>
 		
 		<!-- 
@@ -175,7 +175,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>3.6.10.Final</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
 		
 		<!-- Hibernate library dependecy start -->
 		<dependency>
@@ -263,5 +267,12 @@
 		  <artifactId>json</artifactId>
 		  <version>20090211</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk</artifactId>
+		    <version>1.11.122</version>
+		</dependency>
+		
 	</dependencies>
 </project>
