--- a/src/main/resources/appconfig.properties
+++ b/src/main/resources/appconfig.properties
@@ -1,4 +1,5 @@
-#profilePhotoDir=D:/shallwayprofilephoto/
-#chatServerIP=10.2.249.152
-profilePhotoDir=/media/shallwayProfilePhoto/
-chatServerIP=172.31.10.178
+profilePhotoDir=D:/shallwayprofilephoto/
+chatServerIP=10.205.197.78
+#profilePhotoDir=/media/shallwayProfilePhoto/
+#chatServerIP=172.31.10.178
+apiKey=AIzaSyBiO3BkXmztiLF0R5YW8gtcR9-q6pkpTVc
